// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip component should render properly when it is disabled 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  background-color: transparent;
  font-family: inherit;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  user-select: none;
  text-decoration: none;
  max-width: max-content;
  cursor: not-allowed;
  border: 1px solid #b0bcc8;
  background-color: #b0bcc8;
  color: #ffffff;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .c1+.sc-1pf3x8a-0 {
  cursor: not-allowed;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    disabled=""
    variant="solid"
  >
    <span
      class="c1 c2"
      textalign="initial"
      textcolor="inherit"
    >
      Solid Chip
    </span>
  </button>
</div>
`;

exports[`Chip component should render properly with flat variant 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  background-color: transparent;
  font-family: inherit;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  user-select: none;
  text-decoration: none;
  max-width: max-content;
  cursor: default;
  color: yellow;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .c1+.sc-1pf3x8a-0 {
  cursor: pointer;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    color="yellow"
    variant="flat"
  >
    <span
      class="c1 c2"
      textalign="initial"
      textcolor="inherit"
    >
      Flat Chip
    </span>
  </button>
</div>
`;

exports[`Chip component should render properly with outlined variant 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  background-color: transparent;
  font-family: inherit;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  user-select: none;
  text-decoration: none;
  max-width: max-content;
  cursor: default;
  border: 1px solid secondary;
  color: secondary;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .c1+.sc-1pf3x8a-0 {
  cursor: pointer;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    color="secondary"
    variant="outlined"
  >
    <span
      class="c1 c2"
      textalign="initial"
      textcolor="inherit"
    >
      Outlined Chip
    </span>
  </button>
</div>
`;

exports[`Chip component should render properly with solid variant 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  background-color: transparent;
  font-family: inherit;
  border: none;
  border-radius: 20px;
  padding: 3px 10px;
  margin: 2px;
  user-select: none;
  text-decoration: none;
  max-width: max-content;
  cursor: default;
  border: 1px solid #3872D2;
  background-color: #3872D2;
  color: #ffffff;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c0:focus {
  outline: none;
}

.c0 .c1+.sc-1pf3x8a-0 {
  cursor: pointer;
  margin-left: 10px;
}

<div>
  <button
    class="c0"
    variant="solid"
  >
    <span
      class="c1 c2"
      textalign="initial"
      textcolor="inherit"
    >
      Solid Chip
    </span>
  </button>
</div>
`;
